Fix CSS vertical align

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 
 img {
     width: 50%;
-    /* text-align: center; */
-    /* margin: auto; */
+    /* margin: 0 auto; */
+    margin: auto;
 }
 
 h1 {
@@ -13,9 +13,16 @@ h1 {
 }
 
 p {
-    margin-left: 60px;
+    text-align: center;
 }
 
 .header-image {
     text-align: center;
+}
+
+.main-content {
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
